Dir rename Update initial-fractal-testing.ipynb

--- a/numba-mandelbrot-example/initial-fractal-testing.ipynb
+++ b/numba-mandelbrot-example/initial-fractal-testing.ipynb
@@ -4,9 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inital testing using the link below as a guide\n",
-    "https://nbviewer.jupyter.org/gist/harrism/f5707335f40af9463c43\n",
+    "# NumPy, Numba, Numba.CUDA testing\n",
+    "I used the source below as a guide for this research.\n",
+    "I have included three tests as well as results of the tests.\n",
+    "I have also included some notes that I used to better understand the technolgies I used.\n",
     "\n",
+    "Source: https://nbviewer.jupyter.org/gist/harrism/f5707335f40af9463c43\n",
+    "\n",
+    "*I followed the source closely. Used Numba.CUDA instead of NumbaPro. Minor differences in syntax.*\n",
+    "\n",
+    "**Technologies used:** \n",
+    "- Jupyter Notebook (IPython)\n",
+    "- Python3\n",
+    "- NumPy\n",
+    "- Numba\n",
+    "- Numba.CUDA\n",
+    "- CUDA Toolkit\n",
+    "\n",
+    "----------------------\n",
     "----------------------"
    ]
   },
